--- a/badminton.html
+++ b/badminton.html
@@ -161,6 +161,32 @@
         </div>
     </footer>
 
+    <!-- Firebase SDKs (Using defer to load non-blocking) -->
+    <script defer src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+    <script defer src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
+
+    <!-- Login Button Container (Top Right) -->
+    <div class="login-btn-container" id="auth-container">
+        <!-- Will be populated by JS: Login Button or User Profile -->
+        <button onclick="toggleLoginModal()" class="btn-login">
+            🔒 Login Member
+        </button>
+    </div>
+
+    <!-- Login Modal -->
+    <div class="modal-overlay" id="login-modal">
+        <div class="modal-card">
+            <button class="modal-close" onclick="toggleLoginModal()">&times;</button>
+            <h2 style="color:var(--highlight-color); margin-bottom:10px;">Login Member</h2>
+            <p style="margin-bottom:20px;">Masuk untuk menulis review dan akses fitur komunitas.</p>
+            
+            <button class="google-btn" onclick="loginGoogle()">
+                <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google" class="google-icon">
+                Lanjut dengan Google
+            </button>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 
