--- a/review.html
+++ b/review.html
@@ -283,8 +283,9 @@
     </footer>
 
     <!-- Firebase SDKs -->
-    <script defer src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-    <script defer src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
+    <!-- Firebase SDKs -->
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
 
     <!-- Shared Logic (Auth & Submission) -->
     <script src="script.js"></script>
