Update fitur X dan perbaikan bug Y

--- a/index.html
+++ b/index.html
@@ -19,15 +19,14 @@
 
         <ul class="nav-links">
             <li><a href="#" class="active">Home</a></li>
-            <li><a href=".features">Fitur</a></li>
             <li><a href="#pricing">Harga</a></li>
-            <li><a href=".testimonials">Testimoni</a></li>
+            <li><a href="testimoni.html">Testimoni</a></li>
         </ul>
 
         <!-- Login / User Profile Container (Moved Here) -->
         <div id="auth-container">
             <button onclick="toggleLoginModal()" class="btn-login">
-                🔒 Login
+                Login
             </button>
         </div>
     </nav>
@@ -124,23 +123,7 @@
         </div>
     </section>
 
-    <!-- Testimonials Section -->
-    <section class="testimonials">
-        <div class="container">
-            <h2 class="section-title">Kata Mereka Yang Sudah Menggunakan</h2>
 
-            <!-- Review Form Trigger -->
-            <div style="text-align: center; margin-bottom: 40px;">
-                <a href="#" onclick="handleWriteReviewClick(event)" class="btn-cta"
-                    style="text-decoration:none; display:inline-block;">Tulis
-                    Pengalaman Anda</a>
-            </div>
-
-            <div class="testimonial-grid" id="testimonial-grid">
-                <!-- Reviews will be dynamically inserted here -->
-            </div>
-        </div>
-    </section>
 
     <!-- FAQ Section -->
     <section class="faq">
