--- a/index.html
+++ b/index.html
@@ -234,6 +234,92 @@
         </div>
     </div>
 
+    <!-- 1. Universal Notification Modal (Success/Error) -->
+    <div class="modal-overlay" id="notification-modal" style="z-index: 2000;">
+        <div class="modal-card" style="text-align:center;">
+            <div id="notif-icon" style="font-size:3rem; margin-bottom:15px;">✨</div>
+            <h3 id="notif-title" style="color:white; margin-bottom:10px;">Judul Notifikasi</h3>
+            <p id="notif-message" style="color:var(--text-slate); margin-bottom:20px;">Pesan notifikasi.</p>
+            <button class="btn-cta" onclick="closeModal('notification-modal')"
+                style="width:100%; padding:10px;">OK</button>
+        </div>
+    </div>
+
+    <!-- 2. Universal Confirmation Modal (Delete/Action) -->
+    <div class="modal-overlay" id="confirm-modal" style="z-index: 2000;">
+        <div class="modal-card">
+            <h3 style="color:white; margin-bottom:15px;">Konfirmasi</h3>
+            <p id="confirm-message" style="color:var(--text-slate); margin-bottom:25px;">Yakin ingin melakukan ini?</p>
+            <div class="logout-actions">
+                <button class="btn-cancel-logout" onclick="closeModal('confirm-modal')">Batal</button>
+                <button id="btn-confirm-act" class="btn-confirm-logout" style="background: #ff4757;">Ya, Hapus</button>
+            </div>
+        </div>
+    </div>
+
+    <!-- 3. Add/Edit Product Modal -->
+    <div class="modal-overlay" id="product-form-modal">
+        <div class="modal-card modal-lg">
+            <button class="modal-close" onclick="closeModal('product-form-modal')">&times;</button>
+            <h2 style="color:var(--neon-yellow); margin-bottom:20px;">Kelola Produk</h2>
+            <form id="admin-product-form" onsubmit="handleProductSubmit(event)">
+                <div class="form-group">
+                    <label>Nama Produk</label>
+                    <input type="text" id="prod-name" class="form-control" required placeholder="Nama Produk...">
+                </div>
+                <div class="form-group">
+                    <label>Deskripsi Singkat</label>
+                    <textarea id="prod-desc" class="form-control" rows="2" required
+                        placeholder="Deskripsi..."></textarea>
+                </div>
+                <div style="display:grid; grid-template-columns: 1fr 1fr; gap:15px;">
+                    <div class="form-group">
+                        <label>Harga (Rp)</label>
+                        <input type="number" id="prod-price" class="form-control" required placeholder="150000">
+                    </div>
+                    <div class="form-group">
+                        <label>Diskon (%)</label>
+                        <input type="number" id="prod-discount" class="form-control" placeholder="0">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label>Kategori</label>
+                    <select id="prod-cat" class="form-control" required>
+                        <!-- Options injected by JS -->
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label>URL Gambar</label>
+                    <input type="text" id="prod-img" class="form-control" placeholder="https://...">
+                </div>
+                <button type="submit" class="btn-cta" style="width:100%; margin-top:10px;">Simpan Produk</button>
+            </form>
+        </div>
+    </div>
+
+    <!-- 4. Add Category Modal -->
+    <div class="modal-overlay" id="category-form-modal">
+        <div class="modal-card">
+            <button class="modal-close" onclick="closeModal('category-form-modal')">&times;</button>
+            <h3 style="color:var(--neon-yellow); margin-bottom:15px;">Tambah Kategori</h3>
+            <form onsubmit="handleCategorySubmit(event)">
+                <div class="form-group">
+                    <label>Nama Kategori Baru</label>
+                    <input type="text" id="cat-name-new" class="form-control" required
+                        placeholder="Misal: Training Kit">
+                </div>
+                <button type="submit" class="btn-cta" style="width:100%; margin-top:10px;">Tambah</button>
+            </form>
+            <div style="margin-top:20px; border-top:1px solid #334155; padding-top:15px;">
+                <p style="font-size:0.9rem; color:var(--text-slate); margin-bottom:10px;">Hapus Kategori (Pilih salah
+                    satu)</p>
+                <div id="cat-delete-list" style="display:flex; flex-direction:column; gap:5px;">
+                    <!-- Delete buttons injected by JS -->
+                </div>
+            </div>
+        </div>
+    </div>
+
     <script src="script.js"></script>
 </body>
 
