--- a/index.html
+++ b/index.html
@@ -201,6 +201,7 @@
     <!-- Firebase SDKs (Removed defer to ensure they load before script.js) -->
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
 
     <!-- Login Button Container Removed (Moved to Nav) -->
     <!-- id="auth-container" is now inside nav -->
